<resources>
    <string name="app_name">USmart</string>
    <string name="bluetooth_dialogue_title"></string>
    <string name="settings">Settings</string>
    <string name="connect_to_bluetooth">Connect to Bluetooth</string>
    <string name="devices">Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="search_devices">Search Devices</string>
    <string name="button_configuration">Button Configuration</string>
    <string name="save_configuration">Save Configuration</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="change_logo">Change Logo</string>
    <string name="change_background">Change Background</string>

</resources>
