<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_layout"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:elevation="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/color_white"
        android:id="@+id/action_bar_layout">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:onClick="gotoPreviousActivity"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/activity_title"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@+id/action_bar_layout">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_layout"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:onClick="connectBluetooth"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_bluetooth_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/connect_to_bluetooth"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20dp"
            android:onClick="buttonConfiguration"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_layout">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_settings_white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_configuration"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/color_white"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="20dp"
            android:onClick="gotoThemes"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_layout">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_paint_brush"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change Background &amp; Logo"
                android:textSize="20sp"
                android:layout_margin="10dp"
                android:textColor="@color/color_white"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>