<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main_layout"
    android:layout_height="match_parent"
    tools:context=".ButtonConfiguration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:elevation="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/color_white"
        android:id="@+id/action_bar_layout">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:onClick="goToPreviousActivity"
            android:src="@drawable/ic_arrow_back_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_configuration"
            android:id="@+id/activity_title"
            android:fontFamily="@font/segoeui"
            android:textColor="@color/primary_text"
            android:textSize="22sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_bar"
        android:layout_below="@+id/action_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 1 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Button 1 text"
                        android:textSize="17sp"
                        android:id="@+id/et_one"
                        android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 2 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Button 2 text"
                        android:textSize="17sp"
                        android:id="@+id/et_two"
                        android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 3 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Button 3 text"
                        android:textSize="17sp"
                        android:id="@+id/et_three"
                        android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 4 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Button 4 text"
                        android:textSize="17sp"
                        android:id="@+id/et_four"
                        android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 5 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Button 5 text"
                    android:textSize="17sp"
                    android:id="@+id/et_five"
                    android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 6 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Button 6 text"
                    android:textSize="17sp"
                    android:id="@+id/et_six"
                    android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 7 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Button 7 text"
                    android:textSize="17sp"
                    android:id="@+id/et_seven"
                    android:layout_weight="3"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="10"
                android:layout_gravity="center"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/segoeui"
                    android:text="Button 8 "
                    android:layout_weight="7"
                    android:textSize="17sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Button 8 text"
                    android:textSize="17sp"
                    android:id="@+id/et_eight"
                    android:layout_weight="3"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_bar"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="saveButtonConfig"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/color_white"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="clearAllText"
            android:foreground="?android:attr/selectableItemBackground"
            android:background="@drawable/button_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_all"
                android:textColor="@color/color_white"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>